sửa lại xuất spec và chú thích pydantic model
